# iauv_control

./: CMakeLists.txt  package.xml
iauv_control/: CMakeLists.txt  package.xml
iauv_control/include/iauv_control/: .controller_io.h.kate-swp  cascaded_pid.h  controller_gains.h  controller_io.h  model_parser.h  multi_cascaded_pid.h  param_overrides.h  thruster_allocator.h
iauv_control/src/: body_pid.cpp  body_sm.cpp  controller_io.cpp  joint_gz_pid.cpp  thruster_allocator.cpp
iauv_control/src/common/: cascaded_pid.cpp  model_parser.cpp  multi_cascaded_pid.cpp
iauv_control/src/scripts/: to_fixed_joints.py
iauv_control_msgs/: CMakeLists.txt  package.xml
iauv_control_teleop/: CMakeLists.txt  package.xml
iauv_control_teleop/launch/: teleop_launch.py
include/iauv_control/: cascaded_pid.h  controller_io.h  eigen_typedefs.h  multi_cascaded_pid.h  service_sync.h  thruster_allocator.h
launch/: position_hold_launch.xml  thruster_manager_launch.xml
src/: body_pid.cpp  controller_io.cpp  joint_gz_pid.cpp  thruster_allocator.cpp
srv/: Control.srv
